# fabricaAdmin

./: .env.example  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yaml  invoiceninja-invoiceninja-5.5.58-resolved.json  manage.py  pyproject.toml  tests.py
.github/: pull_request_template.md
adminFabrica/: asgi.py  settings.py  urls.py  views.py
adminFabrica/templates/: base.html
adminFabrica/templates/registration/: login.html
docker/: Dockerfile  docker-compose.yaml
pos/: settings.py  urls.py
pos/templates/: base.html
produccion/: admin.py  apps.py  forms.py  models.py  sincronizarProductos.py  urls.py  views.py
produccion/management/commands/: sincronizarProductos.py
produccion/migrations/: 0001_initial.py  0002_product_is_delete.py  0002_remove_product_product_image.py  0003_production.py  0003_rename_is_delete_product_is_deleted.py  0004_alter_product_price.py  0004_production_uuid_alter_production_id.py  0005_alter_production_date.py  0005_remove_product_delete.py  0006_production_created_at.py
produccion/templates/produccion/: add_produccion.html  base_produccion.html  home.html  list_produccion.html
produccion/templatetags/: custom_filters.py
static/css/: base.css
