[tool.poetry]
name = "pos"
version = "0.1.0"
description = ""
authors = ["agustin serra"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
bootstrap-flask = "^2.4.1"
flask = "^3.1.0"
django = "^5.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
